# soliton

./: .gitignore  CHANGELOG_V2.md  LICENSE  README.md  ROADMAP.md  plugin.json  research-pr-review-agents.md
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: dependabot.yml
agents/: comment-accuracy.md  consistency.md  correctness.md  cross-file-impact.md  hallucination.md  historical-context.md  realist-check.md  risk-scorer.md  silent-failure.md  spec-alignment.md  synthesizer.md  test-quality.md
commands/: blast-radius.md  co-change.md  review-pack.md
docs/: ci-cd-integration.md  hooks-integration.md  pr-faq-soliton.md  self-validation-evidence.md
hooks/: blast-radius-warning.sh
idea-stage/: COMPETITOR_AGENTS_REVIEW.md  DESIGN_TRADITIONAL_AND_GRAPH.md  IDEA_REPORT.md  LITERATURE_REVIEW.md  MANIFEST.md  OSS_ECOSYSTEM_REVIEW.md  POST_V2_FOLLOWUPS.md
lib/: hallucination-ast.md
lib/hallucination-ast/: .gitignore  README.md  pyproject.toml
lib/hallucination-ast/hallucination_ast/: __init__.py  __main__.py  check.py  cli.py  extract.py  resolve.py  similarity.py  types.py
lib/hallucination-ast/scripts/: fetch_khati_corpus.py
lib/hallucination-ast/tests/: conftest.py  test_check.py  test_check_diff.py  test_cli.py  test_extract.py  test_import_context.py  test_khati_corpus.py  test_resolve.py  test_similarity.py  test_types.py
lib/hallucination-ast/tests/fixtures/khati-2026/: NOTICE.md  dataset.csv
rules/: generated-file-patterns.md  generated-file-patterns.mdc  graph-query-patterns.md  model-pricing.md  (+9 more)
(+497 files in other folders)
